--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Lesson 1</title>
-    <script src="./script.js" async></script>
-    <script src="./script.js" defer></script>
+    <script src="../Lesson2_HW/script.js" async></script>
+    <script src="../Lesson2_HW/script.js" defer></script>
 </head>
 <body>
     <div></div>
