--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lesson 4</title>
+    <title>Lesson 5</title>
     <script src="../Lesson1_HW/script.js" async></script>
     <script src="../Lesson1_HW/script.js" defer></script>
+    
+    <link rel="stylesheet" href="../Lesson1_HW/style.css">
+
 </head>
 <body>
-    <div></div>
+
+<!-- ЗАДАНИЕ 1 -->
+<div class="numLetters">
+    <ul class="numbers">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+    </ul>
+
+    <p class="letters">ABCDEFGH</p> 
+
+    <div class="main-block"></div>
+</div>
+
+<!-- ЗАДАНИЕ 3  -->
+    <div class="goods-list">
+    </div>
+
+    <div class="goods-sum">
+    </div> -->
+
+<!-- ЗАДАНИЕ 4 -->
+    <div id='catalog'></div>
+
 </body>
 </html>
