--- a/index.html
+++ b/index.html
@@ -2,27 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Змейка</title>
-
-<!-- 
-
-3. *Убрать границы поля. Т.е. при пересечении границы поля змейка появляется с противоположной стороны. -->
-    
-<link rel="stylesheet" href="style.css" />
+    <title>Урок 8(задачки)</title>
 
 </head>
 <body>
-<div id="game-wrap">
-    <table id="game"></table>
-</div>
-<div id="menu">
-    <div id="playButton" class="menuButton">Старт</div>
-    <div id="newGameButton" class="menuButton">Новая игра</div>
-    <div id="score" class="scoreField">0</div> 
-    <!-- сделать вывод в эту кнопка, выводить 
-    (счетчик (от 0 до 50) на поедание еды / кол-во съеденной еды, установленное игроком) -->
-    
-</div>
 
 <script src="js.js"></script>
 </body>
